# clion-boilerplate-qt5

./: CMakeLists.txt  README.md  main.cpp
